# Hotel-management-system

./: .gitignore  README.md  gitignore.txt
HotelManagementSystemClient/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
HotelManagementSystemClient/assets/qss/: main.qss  mainPage.qss  signIn.qss  signUp.qss
HotelManagementSystemClient/helpers/: hmsclient.cpp  hmsclient.h  hmsconstants.cpp  hmsconstants.h  hmscontrolhelper.cpp  hmscontrolhelper.h  hmsobjects.cpp  hmsobjects.h  hmsuihelper.cpp  hmsuihelper.h
HotelManagementSystemClient/pages/definition/: accountsectionpage.cpp  accountsectionpage.h  booksectionpage.cpp  booksectionpage.h  homesectionpage.cpp  homesectionpage.h  mainpage.cpp  mainpage.h  ordersectionpage.cpp  ordersectionpage.h  signinmainpage.cpp  signinmainpage.h  signinmainpage.ui  signupmainpage.cpp  signupmainpage.h
HotelManagementSystemClient/pages/forms/: accountsectionpage.ui  booksectionpage.ui  homesectionpage.ui  mainpage.ui  ordersectionpage.ui  signinmainpage.ui  signupmainpage.ui
HotelManagementSystemClient/plugins/: hmsmenuwidget.h
HotelManagementSystemClient/widgets/HmsMenuWidget/: hmsmenuwidget.cpp  hmsmenuwidget.h  hmsmenuwidget.ui
HotelManagementSystemClient/widgets/HmsOrderItemWidget/: hmsorderitemwidget.cpp  hmsorderitemwidget.h  hmsorderitemwidget.ui
HotelManagementSystemClient/widgets/HmsPopupWidget/: hmspopupwidget.cpp  hmspopupwidget.h  hmspopupwidget.ui
HotelManagementSystemServer/: CMakeLists.txt  configuration.ini  hmsconfigurator.cpp  hmsconfigurator.h  hmsconstants.cpp  hmsconstants.h  hmsdatabase.cpp  hmsdatabase.h  hmsobjects.h  hmsserver.cpp  hmsserver.h  main.cpp
HotelManagementSystemWidgets/HmsMenuWidget/: HmsMenuWidget.pro  hmsmenuwidget.cpp  hmsmenuwidget.h  hmsmenuwidget.pri  hmsmenuwidget.ui  hmsmenuwidgetplugin.cpp  hmsmenuwidgetplugin.h  hmsmenuwidgetresources.qrc
HotelManagementSystemWidgets/HmsMenuWidget/assets/qss/: menu_main.qss
